k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-dev
  labels:
    app: java-app

---
apiVersion: v1
kind: Namespace
metadata:
  name: devops-prod
  labels:
    app: java-app
